budgeting/ListItemStats: fix spacing of list items and stats to ensure no style breaks with long titles fixes #4899 // templates/*: add hidden h2 to lists for a11y

--- a/meinberlin/assets/scss/components/_list_item.scss
+++ b/meinberlin/assets/scss/components/_list_item.scss
@@ -92,7 +92,7 @@
 }
 
 .list-item__stats {
-    float: right;
+    display: flex;
     margin-left: 0.5 * $spacer;
 }
 
@@ -113,6 +113,7 @@
 }
 
 .list-item__icon {
+    display: flex;
     margin-left: 0.75 * $spacer;
 }
 
